assets/components/src/progress-bar/style.scss
/**
 * Progress bar styles.
 */

@import '../../../shared/scss/muriel-component';

.muriel-progress-bar {
	margin: 16px 0;
	position: relative;
	z-index: 1;

	.muriel-progress-bar__headings {
		font-size: 16px;
		margin-bottom: 1em;
		color: $muriel-gray-600;
		display: flex;
		justify-content: space-between;
		font-weight: 500;
	}

	.muriel-progress-bar__fraction {
		margin-left: auto;
	}

	.muriel-progress-bar__bar {
		height: 4px;
		background-color: $primary_color;
		-webkit-transition: width 0.25s; /* Safari */
  		transition: width 0.25s;

		&::before {
			content: "";
			width: 100%;
			height: 4px;
			background-color: $muriel-gray-100;
			position: absolute;
			z-index: -1;
		}
	}
}

